add works and download

--- a/index.html
+++ b/index.html
@@ -30,50 +30,94 @@
   <!-- header -->
 
   <!-- section promo-->
-  <section>
-    <div class="promo">
+  <section id="promo">
+    <!-- <div class="promo"> -->
       <div class="promo-food-app">
         <div class="promo-description">
-          <div>
+          <p class="subtitle-food-app">Food app</p>
+          <!-- <div>
             <p class="subtitle-food-app">Food app</p>
-          </div>
-          <div>
-            <h1>Why stay hungry when
+          </div> -->
+          <h1>Why stay hungry when </br>
+            you can order form Bella Onojie
+          </h1>
+          <!-- <div>
+            <h1>Why stay hungry when </br>
               you can order form Bella Onojie
             </h1>
-          </div>
+          </div> -->
           <div class="promo-download">
             <h4>Download the bella onoje’s food app now on</h4>
           </div>
         </div>
         <div class="button-stores">
           <div >
-            <button class="button"><a href="#">Playstore</a></button>
-            <!-- <p class="name-store">
-              <a href="#"></a>
-            </p> -->
+            <button class="button button-orange">Playstore</button>
           </div>
           <div >
-            <button class="button"><a href="#">App store</a></button>
-            <!-- <p class="name-store">
-              <a href="#"></a>
-            </p> -->
-          </div>
+            <button class="button">App store</button>
+          </div>  
         </div>
       </div>
-    </div>
-  </section>
+      
+      <img class="promo-phones" src="/img/promo_phones.png" />
+      <!-- <div class="promo-phones">
+        <img src="/img/promo_phones.png" />
+      </div> -->
+
+        
+    <!-- </div> -->
+  </section >
   <!-- section promo-->
 
   <!-- section works -->
-  <section>
-    works
+  <section id="works">
+    <!-- works -->
+    <p class="works-title">How the app works</p>
+    <div class="works-example account">
+      <img class="works-img" src="/img/works_account.jpg"/>
+      <div class="works-text">
+        <h3>Create an account</h3>
+        <h2 class="h2-works">Create/login to an existing </br>
+        account to get started</h2>
+        <h4 class="h4-works">An account is created with your email</br>
+        and a desired password</h4>
+      </div>
+    </div>
+    <div class="works-example varieties">
+      <img class="works-img" src="/img/works_varieties.jpg" />
+      <div class="works-text">
+        <h3>Explore varieties</h3>
+        <h2>Shop for your favorites </br>
+        meal as e dey hot.</h2>
+        <h4 class="h4-works">Shop for your favorite meals or drinks</br>
+        and enjoy while doing it.</h4>
+      </div>
+    </div>
+    <div class="works-example checkout">
+      <img class="works-img" src="/img/works_checkout.jpg" />
+      <div class="works-text">
+        <h3>Checkout</h3>
+        <h2>When you done check out</br>
+        and get it delivered.</h2>
+        <h4 class="h4-works">When you done check out and get it</br>
+        delivered with ease.</h4>
+      </div>
+    </div>
   </section>
   <!-- section works -->
 
   <!-- section downloads -->
-  <section>
-    downloads
+  <section id="download">
+    <h2 class="download-text h2-download">Download the app now.</h2>
+    <h4 class="download-text h4-download">Available on your favorite store. Start your premium experience now</h4>
+    <div class="download_button-stores">
+      <div>
+        <button class="download_button button-orange download_button-playstore">Playstore</button>
+      </div>
+      <div>
+        <button class="download_button download_button-appstore">App store</button>
+      </div>
   </section>
   <!-- section downloads -->
 
