--- a/index.html
+++ b/index.html
@@ -122,8 +122,16 @@
   <!-- section downloads -->
 
   <!-- footer -->
-  <footer>
-    footer
+  <footer id="footer">
+    <div class="logo-img">
+      <img src="/img/logo.png" />
+    </div>
+    <div class="social">
+      <img class="social-icon social-twitter" src="/img/twitter.png"/>
+      <img class="social-icon social-facebook" src="/img/facebook.png" />
+      <img class="social-icon social-instagram" src="/img/instagram.png" />
+    </div>
+    <p class="footer-copyright">Copywright 2020 Bella Onojie.com</p>
   </footer>
   <!-- footer -->
 </body>
