--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- header -->
   <header>
     <div class="logo-img">
-      <img src="/img/logo.png" />
+      <img  src="/img/logo.png" />
     </div>
     <nav class="menu">
       <ul class="menu-bar">
@@ -34,7 +34,7 @@
     <!-- <div class="promo"> -->
       <div class="promo-food-app">
         <div class="promo-description">
-          <p class="subtitle-food-app">Food app</p>
+          <p class="promo-heading">Food app</p>
           <!-- <div>
             <p class="subtitle-food-app">Food app</p>
           </div> -->
@@ -46,21 +46,23 @@
               you can order form Bella Onojie
             </h1>
           </div> -->
-          <div class="promo-download">
+          <div class="promo-subtitle">
             <h4>Download the bella onoje’s food app now on</h4>
           </div>
         </div>
-        <div class="button-stores">
+        <div class="promo-buttons">
           <div >
-            <button class="button button-orange">Playstore</button>
+            <button class="button promo-primary-button"><a class="promo-link" href="#">Playstore</a></button>
           </div>
           <div >
-            <button class="button">App store</button>
+            <button class="button"><a class="promo-link" href="#">App store</a></button>
           </div>  
         </div>
       </div>
+      <div class="promo-img">
+        <img class="promo-phones" src="/img/promo_phones.png" />
+      </div>
       
-      <img class="promo-phones" src="/img/promo_phones.png" />
       <!-- <div class="promo-phones">
         <img src="/img/promo_phones.png" />
       </div> -->
@@ -72,36 +74,44 @@
 
   <!-- section works -->
   <section id="works">
-    <!-- works -->
-    <p class="works-title">How the app works</p>
-    <div class="works-example account">
-      <img class="works-img" src="/img/works_account.jpg"/>
-      <div class="works-text">
-        <h3>Create an account</h3>
-        <h2 class="h2-works">Create/login to an existing </br>
-        account to get started</h2>
-        <h4 class="h4-works">An account is created with your email</br>
-        and a desired password</h4>
+    <hr class="works-line">
+      <p class="works-title">How the app works</p>
+    <div class="works-wrapper">
+      <div class="works-example account">
+        <div class="works-img">
+          <img class="works-img-size" src="/img/works_account.jpg"/>
+        </div>      
+        <div class="works-text">
+          <h3>Create an account</h3>
+          <h2 class="h2-works">Create/login to an existing </br>
+          account to get started</h2>
+          <h4 class="h4-works">An account is created with your email</br>
+          and a desired password</h4>
+        </div>
       </div>
-    </div>
-    <div class="works-example varieties">
-      <img class="works-img" src="/img/works_varieties.jpg" />
-      <div class="works-text">
-        <h3>Explore varieties</h3>
-        <h2>Shop for your favorites </br>
-        meal as e dey hot.</h2>
-        <h4 class="h4-works">Shop for your favorite meals or drinks</br>
-        and enjoy while doing it.</h4>
+      <div class="works-example varieties">
+        <div class="works-img">
+          <img class="works-img-size" src="/img/works_varieties.jpg" />
+        </div>
+        <div class="works-text">
+          <h3>Explore varieties</h3>
+          <h2>Shop for your favorites </br>
+          meal as e dey hot.</h2>
+          <h4 class="h4-works">Shop for your favorite meals or drinks</br>
+          and enjoy while doing it.</h4>
+        </div>
       </div>
-    </div>
-    <div class="works-example checkout">
-      <img class="works-img" src="/img/works_checkout.jpg" />
-      <div class="works-text">
-        <h3>Checkout</h3>
-        <h2>When you done check out</br>
-        and get it delivered.</h2>
-        <h4 class="h4-works">When you done check out and get it</br>
-        delivered with ease.</h4>
+      <div class="works-example checkout">
+        <div class="works-img">
+          <img class="works-img-size" src="/img/works_checkout.jpg" />
+        </div>
+        <div class="works-text">
+          <h3>Checkout</h3>
+          <h2>When you done check out</br>
+          and get it delivered.</h2>
+          <h4 class="h4-works">When you done check out and get it</br>
+          delivered with ease.</h4>
+        </div>
       </div>
     </div>
   </section>
@@ -109,29 +119,35 @@
 
   <!-- section downloads -->
   <section id="download">
-    <h2 class="download-text h2-download">Download the app now.</h2>
-    <h4 class="download-text h4-download">Available on your favorite store. Start your premium experience now</h4>
-    <div class="download_button-stores">
-      <div>
-        <button class="download_button button-orange download_button-playstore">Playstore</button>
-      </div>
-      <div>
-        <button class="download_button download_button-appstore">App store</button>
-      </div>
+    <div class="downloads-wrapper">
+      <h2 class="download-text h2-download">Download the app now.</h2>
+      <h4 class="download-text h4-download">Available on your favorite store. Start your premium experience now</h4>
+      <div class="download-buttons">
+        <div>
+          <button class="download-primary-button "><a class="download-link" href="#">Playstore</a></button>
+        </div>
+        <div>
+          <button class="download-secondary-button"><a class="download-link" href="#">App store</a></button>
+        </div>
+    </div>
   </section>
   <!-- section downloads -->
 
   <!-- footer -->
   <footer id="footer">
-    <div class="logo-img">
-      <img src="/img/logo.png" />
+    <div class="footer-wrapper">
+      <div class="logo-img">
+        <img src="/img/logo.png" />
+      </div>
+      <div class="social">
+        <img class="social-icon social-twitter" src="/img/twitter.png"/>
+        <img class="social-icon social-facebook" src="/img/facebook.png" />
+        <img class="social-icon social-instagram" src="/img/instagram.png" />
+      </div>
+      <div class="copyright-wrapper">
+        <p class="copyright-text">Copywright 2020 Bella Onojie.com</p>
+      </div>
     </div>
-    <div class="social">
-      <img class="social-icon social-twitter" src="/img/twitter.png"/>
-      <img class="social-icon social-facebook" src="/img/facebook.png" />
-      <img class="social-icon social-instagram" src="/img/instagram.png" />
-    </div>
-    <p class="footer-copyright">Copywright 2020 Bella Onojie.com</p>
   </footer>
   <!-- footer -->
 </body>
